Fix (stats-modal): add padding-top to header to ensure it remains in the viewport on mobile screens

--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -199,7 +199,8 @@
   }
 
   .stats__header {
-    padding: 16px;
+    padding: 20px 16px 16px;
+    top:30px;
   }
 
   .stats__title {
